rewrite backend to work with frontend and edit frontend services
