# backend/src/controllers/activity_user_controller.py
@@ -1,17 +1,0 @@
-from services import activity_user_service
-
-
-def get_activity_user(uuid):
-    return activity_user_service.get_by_uuid(uuid)
-
-
-def create_connection():
-    pass
-
-
-def update_connection():
-    pass
-
-
-def delete_connection():
-    pass
