# backend/src/models/person.py
@@ -1,6 +1,7 @@
+import uuid
 from datetime import datetime
 
-from fastapi_utils.guid_type import GUID, GUID_DEFAULT_SQLITE
+from sqlalchemy_utils import UUIDType
 from sqlalchemy.orm import relationship
 
 from config import DATE_FORMAT
@@ -8,8 +9,8 @@ from helpers import db, ApiSheetHelper
 from models.base_entity import BaseEntity
 
 
-class User(BaseEntity):
-    __tablename__ = 'user'
+class Person(BaseEntity):
+    __tablename__ = 'person'
 
     sheet_helper = ApiSheetHelper(__tablename__)
 
@@ -26,14 +27,14 @@ class User(BaseEntity):
     date_out = db.Column(db.Date)
     about = db.Column(db.String)
     avatar = db.Column(db.String)
-    parent_uuid = db.Column(GUID, db.ForeignKey('user.uuid'), nullable=True, default=GUID_DEFAULT_SQLITE)
+    parent_id = db.Column(UUIDType, db.ForeignKey('person.id'), nullable=True, default=uuid.uuid4())
 
-    activities = relationship('Activity', secondary='activity_user', back_populates='users')
-    auths = relationship('Auth', back_populates='user', uselist=True)
+    events = relationship('Event', secondary='activity', back_populates='people')
+    auths = relationship('Auth', back_populates='person', uselist=True)
 
     @classmethod
     def transform_data(cls, dataframe):
-        dataframe = super(User, cls).transform_data(dataframe)
+        dataframe = super(Person, cls).transform_data(dataframe)
         dataframe['date_birth'] = dataframe['date_birth'].apply(
             lambda date: datetime.strptime(date, DATE_FORMAT) if date is not None else None)
         dataframe['date_in'] = dataframe['date_in'].apply(
@@ -44,23 +45,23 @@ class User(BaseEntity):
 
     @classmethod
     def filter_data(cls, dataframe):
-        # TODO user required params
-        return super(User, cls).filter_data(dataframe)
+        # TODO person required params
+        return super(Person, cls).filter_data(dataframe)
 
     def to_short_dict(self):
         return {
-            **super(User, self).to_dict(),
+            **super(Person, self).to_dict(),
             'name': self.name,
             'surname': self.surname,
             'parental': self.parental,
             'status': self.status,
             'faculty': self.faculty,
             'speciality': self.speciality,
-            'date_in': self.date_in.strftime(DATE_FORMAT),
-            'date_out': self.date_in.strftime(DATE_FORMAT),
+            'dateIn': self.date_in.strftime(DATE_FORMAT),
+            'dateOut': self.date_in.strftime(DATE_FORMAT),
             'about': self.about,
             'avatar': self.avatar,
-            'parent_id': str(self.parent_uuid),
+            'parentId': str(self.parent_id),
         }
 
     def to_dict(self):
@@ -68,5 +69,11 @@ class User(BaseEntity):
             **self.to_short_dict(),
             'email': self.email,
             'telephone': self.telephone,
-            'date_birth': self.date_birth.strftime(DATE_FORMAT),
+            'dateBirth': self.date_birth.strftime(DATE_FORMAT),
+        }
+
+    def to_full_dict(self):
+        return {
+            **self.to_short_dict(),
+            'events': list(map(lambda x: x.to_dict(), self.events))
         }
